--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ng-kaltura-player",
   "main": "index.js",
   "homepage": "https://github.com/andrewlively/ng-kaltura-player",
+  "version": "1.0.2",
   "authors": [
     "Andrew Lively <livelyar@ucmail.uc.edu>"
   ],
